--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "format": "prettier --write . --plugin=prettier-plugin-astro"
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.0.0",
     "astro": "^3.0.12",
+    "prettier": "^3.0.3",
+    "prettier-plugin-astro": "^0.12.0",
     "tailwindcss": "^3.0.24"
   }
 }
