--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "format": "prettier --write . --plugin=prettier-plugin-astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.2.0",
     "@astrojs/tailwind": "^5.0.0",
     "astro": "^3.0.12",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "typescript": "^5.2.2"
   }
 }
